python-congressclient (1.2.0-1ubuntu1) UNRELEASED; urgency=medium

  * d/control, d/rules, d/python-congressclient.doc-base: Add
    python-congressclient-doc binary package.

 -- Corey Bryant <corey.bryant@canonical.com>  Fri, 12 Feb 2016 10:31:43 -0500

python-congressclient (1.2.0-1) unstable; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Dec 2015 22:26:10 +0100

python-congressclient (1.1.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 21:45:43 +0000

python-congressclient (1.1.0-1) experimental; urgency=medium

  * New upstream release.
  * Update dependencies.
  * Add myself to Uploaders field

 -- Ivan Udovichenko <iudovichenko@mirantis.com>  Tue, 04 Aug 2015 11:15:33 +0300

python-congressclient (1.0.2-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Sun, 03 May 2015 20:49:14 +0000

python-congressclient (1.0.2-1) experimental; urgency=medium

  * Initial release. (Closes: #778789).

 -- Thomas Goirand <zigo@debian.org>  Thu, 19 Feb 2015 19:36:19 +0100