@@ -11,6 +11,9 @@ Build-Depends: debhelper (>= 9),
                python-pbr (>= 1.8),
                python-setuptools,
                python-sphinx,
+               python3-all,
+               python3-pbr (>= 1.8),
+               python3-setuptools,
 Build-Depends-Indep: python-babel,
                      python-cliff (>= 1.14.0),
                      python-coverage,
@@ -26,6 +29,20 @@ Build-Depends-Indep: python-babel,
                      python-testscenarios,
                      python-testtools (>= 1.4.0),
                      python-webob,
+                     python3-babel,
+                     python3-cliff (>= 1.14.0),
+                     python3-coverage,
+                     python3-fixtures (>= 1.3.1),
+                     python3-hacking,
+                     python3-keystoneclient (>= 1:1.6.0),
+                     python3-mock (>= 1.3),
+                     python3-openstackclient,
+                     python3-oslo.i18n (>= 1.5.0),
+                     python3-requests (>= 2.8.1),
+                     python3-six (>= 1.9.0),
+                     python3-testscenarios,
+                     python3-testtools (>= 1.4.0),
+                     python3-webob,
                      subunit,
                      testrepository,
 Standards-Version: 3.9.6
@@ -56,6 +73,30 @@ Description: client for the open policy framework for the cloud - Python 2.x
  work with any policy and any cloud service.
  .
  This package provides a cli and a Python 2.x client module.
+
+Package: python3-congressclient
+Architecture: all
+Depends: python3-babel,
+         python3-cliff (>= 1.14.0),
+         python3-keystoneclient (>= 1:1.6.0),
+         python3-openstackclient,
+         python3-oslo.i18n (>= 1.5.0),
+         python3-pbr (>= 1.8),
+         python3-requests (>= 2.8.1),
+         python3-six (>= 1.9.0),
+         ${misc:Depends},
+         ${python3:Depends},
+Description: client for the open policy framework for the cloud - Python 3.x
+ Congress is an open policy framework for the cloud. With Congress, a cloud
+ operator can declare, monitor, enforce, and audit "policy" in a heterogeneous
+ cloud environment. Congress get inputs from a cloud's various cloud services;
+ for example in Openstack, Congress fetches information about VMs from Nova,
+ and network state from Neutron, etc. Congress then feeds input data from those
+ services into its policy engine where Congress verifies that the cloud's
+ actual state abides by the cloud operator's policies. Congress is designed to
+ work with any policy and any cloud service.
+ .
+ This package provides a cli and a Python 3.x client module.
 
 Package: python-congressclient-doc
 Architecture: all
